# libdomain

./: CMakeLists.txt  LICENSE  README.md  main.cpp
app/: CMakeLists.txt  GameView.qml  InfoPanel.qml  TrophyType.qml  main.cpp  main.qml  qml.qrc
app/assets/: assets.qrc
app/src/: domain.cpp  domain.hpp  game_view_model.cpp  game_view_model.hpp  gold_controller.hpp  qdom.hpp  qdomainmodel.hpp
src/: dom.hpp  dom_schema.hpp  main.cpp  qdom.hpp  qdomainmodel.hpp
